--- a/proyecto_1erParcial/package.json
+++ b/proyecto_1erParcial/package.json
@@ -12,11 +12,16 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/jsonwebtoken": "^9.0.9",
+    "bcrypt": "^6.0.0",
+    "dayjs": "^1.11.13",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "mongoose": "^8.15.0",
     "morgan": "^1.10.0",
-    "node-cache": "^5.1.2"
+    "node-cache": "^5.1.2",
+    "router": "^2.2.0"
   },
   "devDependencies": {
     "@types/express": "^5.0.2",
